--- a/css/font.css
+++ b/css/font.css
@@ -4,4 +4,7 @@
 
   font-family: "Mao Ken Tang Yuan";
   src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/maokenwangtangyuan.woff2") format("woff2");
+
+  font-family: "Meng Shen";
+  src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/mengshenshouxieti.woff2") format("woff2");
 }
