--- a/css/font.css
+++ b/css/font.css
@@ -1,10 +1,7 @@
 @font-face {
-  font-family: "Lai Hu";
-  src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/laihusc.woff2") format("woff2");
-
-  font-family: "Mao Ken Tang Yuan";
-  src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/maokenwangtangyuan.woff2") format("woff2");
-
   font-family: "Meng Shen";
   src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/mengshenshouxieti.woff2") format("woff2");
+
+  font-family: "Jing Nan Yuan Mai";
+  src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/jingnanyuanmai.ttf") format("ttf");
 }
