--- a/css/font.css
+++ b/css/font.css
@@ -8,8 +8,8 @@
   src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/HYLiangPinXian.woff2") format("woff2");
 */
 
-  font-family: "Lai Hu";
-  src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/LaiHuSC.woff2") format("woff2");
+  font-family: "Xiao Lai";
+  src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/XiaoLai.woff2") format("woff2");
 
 }
 div{
