--- a/css/font.css
+++ b/css/font.css
@@ -10,7 +10,8 @@
 
   font-family: "Xiao Lai";
   src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/XiaoLai.woff2") format("woff2");
-
+  /*font-display: swap;*/
+  /*font-display:[auto, swap, fallback, optional]设为swap时先显示后备文本，字体加载好时再切换*/
 }
 div{
   font-size: 17px;
