--- a/css/font.css
+++ b/css/font.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Xiao Lai Title";
-  src: url("https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources/fonts/XiaoLai-title.woff2") format("woff2");
+  src: url("https://cdn.moe233.net/fonts/XiaoLai-title.woff2") format("woff2");
   /*font-display: swap;*/
   /*font-display:[auto, swap, fallback, optional]设为swap时先显示后备文本，字体加载好时再切换*/
 }
