--- a/css/cursor.css
+++ b/css/cursor.css
@@ -1,7 +1,7 @@
 body {
-	cursor: url(https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources@latest/cursor/default.cur),auto;
+	cursor: url(https://cdn.moe233.net/cursor/default.cur),auto;
 }
 
 a,button,img {
-	cursor: url(https://cdn.jsdelivr.net/gh/icedtangerine7/blog-resources@latest/cursor/pointer.cur),auto;
+	cursor: url(https://cdn.moe233.net/cursor/pointer.cur),auto;
 }
