--- a/css/font.css
+++ b/css/font.css
@@ -4,6 +4,12 @@
   /*font-display: swap;*/
   /*font-display:[auto, swap, fallback, optional]设为swap时先显示后备文本，字体加载好时再切换*/
 }
+@font-face {
+  font-family: 'Ubuntu Regular';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ubuntu Regular'), url("https://cdn.moe233.net/fonts/Ubuntu-Regular.woff2") format('woff2');
+}
 /*
 div{
   font-size: 17px;
